# EpochCore

./: .gitignore  CMakeLists.txt  README.md
cmake/: EpochCoreCPM.cmake  EpochCoreConfig.cmake
epoch_core/: catch_defs.h  common_utils.h  enum_wrapper.h  error_context.h  error_type.h  macros.h  ranges_to.h  status.h
